--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,5 +1,7 @@
 :root {
     --bg-color: rgb(237, 237, 237);
+    --inverted-bg-color: rgb(19, 8, 65);
+
     --primary-color: #1c3197;
     --secondary-color: #5954d7;
 }
