--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,7 +1,7 @@
 .app.dark {
-    --bg-color: rgb(19, 8, 65);
+    --bg-color: rgb(76, 57, 152);
     --inverted-bg-color: rgb(237, 237, 237);
     
-    --primary-color: #20790c;
-    --secondary-color: #34b617;
+    --primary-color: #090e26;
+    --secondary-color: #040614;
 }
