--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -1,11 +1,11 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-button, input{
+button,
+input {
     font-size: inherit;
     cursor: pointer;
 }
-
