--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,7 +1,6 @@
 :root {
-    --bg-color: rgb(237, 237, 237);
-    --inverted-bg-color: rgb(76, 57, 152);
-
+    --bg-color: rgb(237 237 237);
+    --inverted-bg-color: rgb(76 57 152);
     --primary-color: #090e26;
     --secondary-color: #02040b;
 }
