--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -1,21 +1,23 @@
-.Sidebar{
+.Sidebar {
     height: calc(100vh - var(--navbar-height));
     width: var(--sidebar-width);
     background: var(--inverted-bg-color);
     position: relative;
-    transition: width .3s;
+    transition: width 0.3s;
 }
 
-.collapsed{
+.collapsed {
     width: var(--sidebar-width-collapsed);
 }
-.switchers{
+
+.switchers {
     position: absolute;
     bottom: 40px;
     display: flex;
     justify-content: center;
     width: 100%;
 }
-.lang{
+
+.lang {
     margin-left: 20px;
 }
