--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -18,6 +18,7 @@
 .content {
     padding: 20px;
     border-radius: 20px;
+    color: var(--primary-color);
     background: var(--bg-color);
     transition: 0.3s transform;
     transform: scale(0.3);
@@ -28,14 +29,13 @@
     opacity: 1;
     pointer-events: auto;
     z-index: var(--modal-z-index);
-    .content{
+    .content {
         transform: scale(1);
     }
 }
 
-
-.isClosing{
-    .content{
+.isClosing {
+    .content {
         transform: scale(0.3);
     }
 }
