--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -4,14 +4,15 @@
     padding: 6px 15px;
 }
 
-.clear, .clearInverted {
+.clear,
+.clearInverted {
     padding: 0;
     border: none;
     background: none;
     outline: none;
 }
 
-.clearInverted{
+.clearInverted {
     color: var(--inverted-primary-color);
 }
 
@@ -41,11 +42,13 @@
     width: var(--font-line-m);
     height: var(--font-line-m);
 }
+
 .square.size_l {
     width: var(--font-line-l);
     height: var(--font-line-l);
     font: var(--font-l);
 }
+
 .square.size_xl {
     width: var(--font-line-xl);
     height: var(--font-line-xl);
@@ -55,9 +58,11 @@
 .size_m {
     font: var(--font-m);
 }
+
 .size_l {
     font: var(--font-l);
 }
+
 .size_xl {
     font: var(--font-xl);
 }
