--- a/src/shared/ui/Input/Input.module.scss
+++ b/src/shared/ui/Input/Input.module.scss
@@ -7,39 +7,38 @@
     outline: none;
     background: transparent;
     width: 100%;
-    color: transparent;
-    text-shadow: 0 0 0 var(--primary-color);
+    color: var(--primary-color);
 }
 
 .placeholder {
     margin-right: 5px;
 }
 
-.caretWrapper {
-    position: relative;
-    flex-grow: 1;
-}
+// .caretWrapper {
+//     position: relative;
+//     flex-grow: 1;
+// }
 
-.caret {
-    position: absolute;
-    height: 3px;
-    width: 13px;
-    background-color: var(--primary-color);
-    bottom: 0;
-    left: 0;
-    animation: blink 0.7s forwards infinite;
-}
+// .caret {
+//     position: absolute;
+//     height: 3px;
+//     width: 13px;
+//     background-color: var(--primary-color);
+//     bottom: 0;
+//     left: 0;
+//     animation: blink 0.7s forwards infinite;
+// }
 
-@keyframes blink {
-    0% {
-        opacity: 0;
-    }
+// @keyframes blink {
+//     0% {
+//         opacity: 0;
+//     }
 
-    50% {
-        opacity: 0.01;
-    }
+//     50% {
+//         opacity: 0.01;
+//     }
 
-    100% {
-        opacity: 1;
-    }
-}
+//     100% {
+//         opacity: 1;
+//     }
+// }
